@@ -3506,7 +3506,7 @@ if [ $HOS = win32 ] ; then
   echotab "for f in ANNOUNCE COPYRIGHT GNU-GPL SUMMARY NEWS README README.de README.es ; do \\"
   echotab "  if test -f \$\$f ; then cp -p \$\$f \$\$distdir/\$\$f ; else cp -p \`echo \$\$f | tr '[A-Z]' '[a-z]'\` \$\$distdir/\$\$f ; fi ; \\"
   echotab "done ; \\"
-  echotab "for f in lisp.exe lispinit.mem ; do \\"
+  echotab "for f in lisp.exe lispinit.mem install.bat ; do \\"
   echotab "  cp -p \$\$f \$\$distdir/\$\$f ; \\"
   echotab "done ; \\"
   echotab "mkdir \$\$distdir/doc ; \\"
@@ -3514,7 +3514,7 @@ if [ $HOS = win32 ] ; then
   echotab "  if test -f \$\$f ; then cp -p \$\$f \$\$distdir/doc/\$\$f ; else cp -p \`echo \$\$f | tr '[A-Z]' '[a-z]'\` \$\$distdir/doc/\$\$f ; fi ; \\"
   echotab "done ; \\"
   echotab "mkdir \$\$distdir/src ; \\"
-  echotab "cp -p \$(LISPFILES) \$\$distdir/src/ ; \\"
+  echotab "cp -p \$(LISPFILES) install.lisp \$\$distdir/src/ ; \\"
   echotab "chmod 755 \$\$distdir/. \$\$distdir/*/. ; \\"
   echotab "chmod 644 \`find \$\$distdir -type f -print\` ; \\"
   echotab "rm -f \$\$distfile ; \\"
